# ep-svd-llm

./: .gitignore  LICENSE  README.md  pyproject.toml
ep_svd_llm/: __init__.py
ep_svd_llm/core/: __init__.py  base_compressor.py  ep_svd_llm.py  pipeline.py  svd_llm.py
ep_svd_llm/data/: __init__.py  calibration.py
ep_svd_llm/models/: __init__.py  loader.py
ep_svd_llm/utils/: __init__.py  activation.py  metrics.py
runners/: run_tinyllama_tutorial.py
scripts/: compress_model.py  evaluate_model.py
tests/: test_accumulators.py  test_base_compressor.py  test_compress_core.py  test_ep_correction.py  test_loader_utils.py  test_metrics.py  test_model_loading.py  test_pipeline.py
