[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ep-svd-llm"
version = "0.1.0"
description = "Error-Propagation SVD for LLM compression"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0",
    "transformers>=4.35",
    "datasets",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ep_svd_llm*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
